# CC-232-fpantojal

./: recurso.html
Libreria_cc232/: .gitignore  CMakeLists.txt
Libreria_cc232/Semana1/: README.md
Libreria_cc232/Semana1/demos/: demo_adt_secuencia.cpp  demo_bubblesort.cpp  demo_countones.cpp  demo_fibonacci.cpp  demo_gcd.cpp  demo_hanoi.cpp  demo_maximos.cpp  demo_power.cpp  demo_reverse_shift.cpp  demo_sum.cpp  demo_sum_explicado.cpp
Libreria_cc232/Semana1/ejercicios/: e01_modelo_ram.md  e02_orden_crecimiento.md  e03_correctitud_invariantes.md  e04_bubblesort_correctitud.md  e05_robustez_reutilizacion.md
Libreria_cc232/Semana1/lecturas/: 00_plan_lectura.md  01_resumen_semana.md  02_deng_cap1.md  03_morin_cap1.md  04_deng_algoritmos_clave.md
Libreria_cc232/Semana1/pruebas_publicas/: README.md  casos_fibonacci.md  casos_power.md  casos_sum.md  test_public_week1.cpp  test_public_week1_extra.cpp
Libreria_cc232/Semana1/sustentacion/: preguntas_semana1.md  rubrica_semana1.md
Libreria_cc232/Semana2/: README.md  Resumen_Semana2.md  actividad2_semana2.md
Libreria_cc232/Semana2/practica-calificada2/: .gitignore  CMakeLists.txt  README.md
Libreria_cc232/Semana2/practica-calificada2/benchmark/: bench_bracket_solver.cpp
Libreria_cc232/Semana2/practica-calificada2/demos/: demo_brackets_comparison.cpp  demo_brackets_nonoptimized.cpp  demo_brackets_optimized.cpp
Libreria_cc232/Semana2/practica-calificada2/docs/: conclusion.md
Libreria_cc232/Semana2/practica-calificada2/include/: BracketStats.h  mini_bench.h
Libreria_cc232/Semana2/practica-calificada2/resultados/: gprof_report_bench_cracket_solver.txt  resultado_gprof_report_bench_cracket_solver.md
Libreria_cc232/Semana2/practica-calificada2/src/: BracketSolver.cpp  main.cpp
Libreria_cc232/Semana2/practica-calificada2/tests/: test_bracket_solver_basic.cpp  test_bracket_solver_extended.cpp  test_bracket_solver_stress.cpp
Libreria_cc232/Semana2/practica-calificada2/video/: link_video.txt
Libreria_cc232/Semana3/: Actividad3-CC232.md  actividad3-semana3.md
Libreria_cc232/Semana3/lecturas/: Lectura7-Morin.md
Libreria_cc232/Semana4/: Actividad4-CC232.md  Ejercicios4-CC232.md  README.md  actividad4_semana4.md
Libreria_cc232/Semana4/include/: BankSimulation.h  Maze.h  NQueens.h
Libreria_cc232/Semana5/: Actividad5-CC232.md  Ejercicios5-CC232.md  Lectura9-Deng.md  README.md
Libreria_cc232/Semana5/lecturas/: Notas.md
Practicas/Practica2_CC232/: Indicaciones.md  Problemas-Evaluacion2.csv
Semana0/: INSTRUCCIONES_Ejercicios0_v4.2.md
Semana0/Proyecto0/apps/: demo_line_stats.cpp
Semana0/Proyecto0/docs/: README.md
Semana0/Proyecto0/tests/: test_line_stats.cpp
